<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>hms.session</groupId>
    <artifactId>java-session-gc</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <conf.file.path>../generated-resources/appassembler/jsw/session-gc/conf</conf.file.path>
    </properties>

    <dependencies>
        <dependency>
            <groupId>tanukisoft</groupId>
            <artifactId>wrapper</artifactId>
            <version>3.2.3</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>2.2.0.RELEASE</version>
        </dependency>

        <dependency>
            <groupId>hms.common</groupId>
            <artifactId>hms-common-util</artifactId>
            <version>1.0.15</version>
        </dependency>

        <!-- jaxb api-->
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.4.0-b180830.0359</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.30</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.3</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>1.2.3</version>
        </dependency>
    </dependencies>

    <build>
    <sourceDirectory>src/main/java</sourceDirectory>
    <testSourceDirectory>src/test/java</testSourceDirectory>

    <resources>
        <resource>
            <directory>src/main/conf</directory>
            <filtering>true</filtering>
            <targetPath>${conf.file.path}</targetPath>
            <includes>
                <include>**/*</include>
            </includes>
        </resource>
    </resources>

    <testResources>
        <testResource>
            <directory>src/test/resources</directory>
            <filtering>true</filtering>
            <includes>
                <include>**/*</include>
            </includes>
        </testResource>
    </testResources>

    <plugins>
        <plugin>
            <artifactId>maven-assembly-plugin</artifactId>
            <version>2.3</version>
            <configuration>
                <descriptors>
                    <descriptor>/src/main/assembly/src.xml</descriptor>
                </descriptors>
            </configuration>
            <executions>
                <execution>
                    <phase>install</phase>
                    <goals>
                        <goal>single</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>

        <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>appassembler-maven-plugin</artifactId>
            <version>1.1.1</version>
            <configuration>
                <generateRepository>true</generateRepository>
                <repoPath>lib</repoPath>
                <repositoryLayout>flat</repositoryLayout>
                <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
                <assembleDirectory>target/generated-resources/appassembler/jsw/session-gc</assembleDirectory>
                <showConsoleWindow>true</showConsoleWindow>
                <configurationDirectory>src/main/conf</configurationDirectory>
                <!--<defaultJvmSettings>-->
                    <!--<initialMemorySize>512M</initialMemorySize>-->
                    <!--<maxMemorySize>1024M</maxMemorySize>-->
                <!--</defaultJvmSettings>-->

                <daemons>
                    <daemon>
                        <id>session-gc</id>
                        <mainClass>hms.session.gc.boot.ApiStarter</mainClass>
                        <platforms>
                            <platform>jsw</platform>
                        </platforms>
                        <jvmSettings>
                            <systemProperties>
                                <systemProperty>-server</systemProperty>
                                <systemProperty>com.sun.management.jmxremote</systemProperty>
                                <systemProperty>java.rmi.server.hostname=127.0.0.1</systemProperty>
                                <systemProperty>com.sun.management.jmxremote.port=9011</systemProperty>
                                <systemProperty>com.sun.management.jmxremote.rmi.port=9011</systemProperty>
                                <systemProperty>com.sun.management.jmxremote.local.only=false</systemProperty>
                                <systemProperty>com.sun.management.jmxremote.authenticate=false</systemProperty>
                                <systemProperty>com.sun.management.jmxremote.ssl=false</systemProperty>
                                <systemProperty>user.timezone=Asia/Colombo</systemProperty>
                            </systemProperties>
                        </jvmSettings>
                        <generatorConfigurations>
                            <generatorConfiguration>
                                <generator>jsw</generator>
                                <configuration>
                                    <property>
                                        <name>wrapper.java.additional.1</name>
                                        <value>-verbose:gc</value>
                                    </property>
                                    <property>
                                        <name>wrapper.java.additional.2</name>
                                        <value>-Xloggc:/hms/logs/session-gc/gc.log</value>
                                    </property>
                                    <property>
                                        <name>wrapper.java.additional.3</name>
                                        <value>-XX:+UseG1GC</value>
                                    </property>
                                    <property>
                                        <name>wrapper.java.additional.4</name>
                                        <value>-XX:PermSize=4m</value>
                                    </property>
                                    <property>
                                        <name>wrapper.java.additional.5</name>
                                        <value>-XX:MaxPermSize=8m</value>
                                    </property>
                                    <property>
                                        <name>wrapper.java.additional.6</name>
                                        <value>-Xms8m</value>
                                    </property>
                                    <property>
                                        <name>wrapper.java.additional.7</name>
                                        <value>-Xmx16m</value>
                                    </property>
                                    <property>
                                        <name>wrapper.java.additional.8</name>
                                        <value>-XX:ParallelGCThreads=4</value>
                                    </property>
                                    <property>
                                        <name>wrapper.java.additional.9</name>
                                        <value>-XX:ConcGCThreads=2</value>
                                    </property>
                                    <property>
                                        <name>wrapper.java.additional.10</name>
                                        <value>-XX:MaxNewSize=4m</value>
                                    </property>
                                    <property>
                                        <name>wrapper.java.additional.11</name>
                                        <value>-XX:NewSize=4m</value>
                                    </property>
                                    <property>
                                        <name>wrapper.java.additional.12</name>
                                        <value>-XX:+PrintGCDateStamps</value>
                                    </property>
                                    <property>
                                        <name>wrapper.java.additional.13</name>
                                        <value>-XX:+UnlockCommercialFeatures</value>
                                    </property>
                                    <property>
                                        <name>wrapper.java.additional.14</name>
                                        <value>-XX:+FlightRecorder</value>
                                    </property>
                                    <property>
                                        <name>configuration.directory.in.classpath.first</name>
                                        <value>conf</value>
                                    </property>
                                    <property>
                                        <name>set.default.REPO_DIR</name>
                                        <value>lib</value>
                                    </property>
                                    <property>
                                        <name>wrapper.logfile</name>
                                        <value>logs/wrapper.log</value>
                                    </property>
                                    <property>
                                        <name>wrapper.java.mainclass</name>
                                        <value>org.tanukisoftware.wrapper.WrapperSimpleApp</value>
                                    </property>
                                    <property>
                                        <name>wrapper.startup.timeout</name>
                                        <value>600</value>
                                    </property>
                                </configuration>
                                <includes>
                                    <include>linux-x86-64</include>
                                    <include>windows-x86-64</include>
                                </includes>
                            </generatorConfiguration>
                        </generatorConfigurations>
                    </daemon>
                </daemons>
            </configuration>
            <executions>
                <execution>
                    <goals>
                        <goal>generate-daemons</goal>
                        <goal>create-repository</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>

        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
            <version>2.3</version>
            <configuration>
                <excludes>
                    <exclude>*.properties</exclude>
                    <exclude>*.yml</exclude>
                    <exclude>*.xml</exclude>
                </excludes>
            </configuration>
        </plugin>
    </plugins>

    </build>

    <repositories>
        <repository>
            <id>archiva.internal</id>
            <url>http://archiva.hsenidmobile.com/repository/internal/</url>
        </repository>
        <repository>
            <id>hms-internal</id>
            <url>http://archiva.hsenidmobile.com/repository/internal/</url>
        </repository>

    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>internal</id>
            <url>http://archiva.hsenidmobile.com/repository/internal/</url>
        </pluginRepository>
        <pluginRepository>
            <id>snapshots</id>
            <url>http://archiva.hsenidmobile.com/repository/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>
    <distributionManagement>
        <repository>
            <id>archiva.internal</id>
            <url>http://archiva.hsenidmobile.com/repository/internal/</url>
        </repository>
    </distributionManagement>

</project>